# strata-query

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
assets/diagrams/: architecture.mmd  query-path.mmd  write-path.mmd
mars/: README.md
mars/benchmarks/: mars_baselines.rs  mars_multi.rs  mars_pruninglag.rs  mars_scale.rs
mars/results/: results_dense.txt
mars/scripts/: dense_subroute.sql  measure.sql
src/: flight.rs  lib.rs  main.rs  query.rs  routing.rs  server.rs  storage.rs  test_data.rs  types.rs
src/query/: sql.rs
src/routing/: hash.rs
src/storage/: parquet_reader.rs  parquet_writer.rs  reader.rs  wal.rs  writer.rs
tests/: flight.rs  pruning.rs  query.rs  routing.rs  server.rs  storage.rs  test_data.rs  types.rs
tests/common/: mod.rs
tests/query/: sql.rs
tests/routing/: hash.rs
tests/storage/: parquet_reader.rs  parquet_writer.rs  reader.rs  wal.rs  writer.rs
