[package]
name = "strata-query"
version = "0.1.0"
edition = "2021"
description = "Multi-column segment-pruning query engine: existence bitsets plus magnitude-aware routing for fast selective queries over Parquet."
license = "MIT"
repository = "https://github.com/batalabs/strata-query"
readme = "README.md"
keywords = ["database", "query-engine", "parquet", "pruning", "olap"]
categories = ["database", "database-implementations"]
# Archived/experimental junk lives here: excluded from packaging, build, and lint.
exclude = [".exclude", ".exclude/**"]

[dependencies]
bitvec = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ahash = "0.8"
anyhow = "1.0"
rand = "0.8"
base64 = "0.21"
arrow = "53.0"
parquet = "53.0"
tempfile = "3.8"
sqlparser = "0.53"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
arrow-flight = { version = "53.0", features = ["flight-sql-experimental"] }
tonic = "0.12"
prost = "0.13"
futures = "0.3"

[dev-dependencies]
# Test-only: drive the axum `Router` in-process via `ServiceExt::oneshot`
# (no TCP bind) in server.rs unit tests. `util` enables the `oneshot` combinator.
tower = { version = "0.5", features = ["util"] }
